--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
         <div id="chat-box">
             
-                <i class="fas fa-comment-dots" style="color: white;font-size: 40px;position: fixed;bottom: 30px;right: 30px;z-index: 3;" id="chat-open"> </i>
+                <i class="fa fa-message" style="color: white;font-size: 40px;position: fixed;bottom: 30px;right: 30px;z-index: 3;" id="chat-open"> </i>
             
         </div>
         <!-- social link menu list -->
