--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
-        <div id="chat-box">
+<!--         <div id="chat-box">
             
                 <i class="fa fa-whatsapp" style="color: white;font-size: 40px;position: fixed;bottom: 30px;right: 30px;z-index: 3;" id="chat-open"> </i>
             
-        </div>
+        </div> -->
         <!-- social link menu list -->
         <div id="social-link">
             <i class="fa fa-whatsapp"><a href=""></a></i>
