--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
     <!-- style for chat box start -->
 <style>
+    body
+    {
+            overflow-x: hidden;
+
+    }
+    
     #en-main
     {
         background-color: white;
