--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@
             opacity: 1;
         }
     }
+    #chat-box
+    {
+        position: fixed;
+        bottom: 30px;
+        right: 30px;
+    }
+    #chat-box
+    {
+      color: white;
+      font-size: 40px;
+      z-index: 1;
+    }
    </style>
     <!-- style for chat box end -->
 </head>
@@ -174,11 +186,11 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
-<!--         <div id="chat-box">
+           <div id="chat-box">
             
-                <i class="fa fa-whatsapp" style="color: white;font-size: 40px;position: fixed;bottom: 30px;right: 30px;z-index: 3;" id="chat-open"> </i>
+                <i class="fa fa-whatsapp" id="chat-open"> </i>
             
-        </div> -->
+        </div>
         <!-- social link menu list -->
         <div id="social-link">
             <i class="fa fa-whatsapp"><a href=""></a></i>
