--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
             <div id="mob-social-link">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" style="color: #5F65F4;">About</a></li>
+                    <li><a href="about.html" style="color: #5F65F4;">about</a></li>
                     <li><a href="service.html">Services</a></li>
                     <li><a href="work.html">Our Work</a></li>
                     <li><a href="team.html">Team</a></li>
